--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ description = "Node installer, made properly."
 version = "0.0.0"
 edition = "2021"
 rust-version = "1.79.0"
+
+[dependencies]
+anyhow = "1.0.86"
+clap = { version = "4.5.8", features = ["derive"] }
