--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ rust-version = "1.79.0"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.8", features = ["derive"] }
-semver = "1.0.23"
+semver = { version = "1.0.23", features = ["serde"] }
+serde = { version = "1.0.203", features = ["derive"] }
+ureq = { version = "2.9.7", features = ["json"] }
