--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ clap = { version = "4.5.8", features = ["derive"] }
 node-semver = { git = "https://github.com/catuhana/node-semver-rs", features = [
   "serde",
 ] }
+reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.203", features = ["derive"] }
-ureq = { version = "2.9.7", features = ["json"] }
