Add progress bar to `install` and `list` commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lto = "fat"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.8", features = ["derive"] }
+indicatif = { version = "0.17.8", features = ["improved_unicode"] }
 node-semver = { git = "https://github.com/catuhana/node-semver-rs", features = [
   "serde",
 ] }
