--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ node-semver = { git = "https://github.com/catuhana/node-semver-rs", features = [
 ] }
 reqwest = { version = "0.12.5", features = ["blocking", "json"] }
 serde = { version = "1.0.203", features = ["derive"] }
+tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync", "macros"] }
