Fix extension recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
   "recommendations": [
-    "serayuzgur.crates",
+    "fill-labs.dependi",
     "tamasfe.even-better-toml",
     "github.vscode-github-actions",
     "esbenp.prettier-vscode",
