--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ lto = "fat"
 [dependencies]
 anyhow = "1.0.86"
 clap = { version = "4.5.17", features = ["derive"] }
-dircpy = "0.3.19"
+dircpy = { git = "https://github.com/catuhana/dircpy", version = "0.3.18", default-features = false }
 dirs = "5.0.1"
 fastrand = "2.1.1"
 indicatif = { version = "0.17.8", features = ["improved_unicode"] }
