--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,6 @@ liblzma = "0.3.4"
 node-semver = { git = "https://github.com/catuhana/node-semver-rs", features = [
   "serde",
 ] }
-reqwest = { version = "0.12.7", features = ["blocking", "json", "stream"] }
 serde = { version = "1.0.210", features = ["derive"] }
 tar = "0.4.41"
+ureq = { version = "2.10.1", features = ["json"] }
