--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ lto = "fat"
 
 [dependencies]
 anyhow = "1.0.87"
+binstall-tar = "0.4.42"
 clap = { version = "4.5.17", features = ["derive"] }
 dircpy = { git = "https://github.com/catuhana/dircpy", default-features = false }
 dirs = "5.0.1"
-fastrand = "2.1.1"
 indicatif = { version = "0.17.8", features = ["improved_unicode"] }
 inquire = "0.7.5"
 liblzma = "0.3.4"
@@ -23,5 +23,4 @@ node-semver = { git = "https://github.com/catuhana/node-semver-rs", features = [
   "serde",
 ] }
 serde = { version = "1.0.210", features = ["derive"] }
-tar = "0.4.41"
 ureq = { version = "2.10.1", features = ["json"] }
