--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -49,7 +49,7 @@ jobs:
             ~/.cargo/registry/cache
             ~/.cargo/git/db
             target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          key: ${{ runner.os }}-cargo-stable-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build project
         run: cargo build --verbose --release
