--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -28,6 +28,7 @@ jobs:
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
     runs-on: ${{ matrix.os }}
     permissions:
       id-token: write
