--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [":label(dependencies)", ":maintainLockFilesWeekly", "config:base"]
+  "extends": [
+    ":label(dependencies)",
+    ":maintainLockFilesWeekly",
+    ":automergeMinor",
+    "config:base"
+  ],
+  "bumpVersion": "patch"
 }
