--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,16 @@
 name: Release
+run-name: ${{ inputs.reason }}
 
 on:
   push:
     tags:
       - v*
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: Dispatch reason
+        required: true
+        type: string
 
 permissions:
   contents: write
@@ -12,6 +19,9 @@ jobs:
   create-release:
     name: Create Release
     runs-on: ubuntu-latest
+    outputs:
+      release-id: ${{ steps.create-release.outputs.result }}
+    if: github.event_name == 'push'
     steps:
       - name: Create release
         id: create-release
@@ -28,3 +38,49 @@ jobs:
             });
 
             return release.data.id;
+  build-and-upload:
+    name: Build and Upload
+    needs: create-release
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup or update Rust toolchain
+        run: rustup toolchain install stable --profile default
+
+      - name: Set-up Rust cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/bin
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+            target/
+          key: ${{ runner.os }}-cargo-stable-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Build project
+        run: cargo build --verbose --release
+
+      - name: Upload release asset
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const asset = await (await import("node:fs/promises")).readFile(
+              `target/release/${context.repo.repo}${{ runner.os == 'Windows' && '.exe' || '' }}`,
+            );
+
+            await github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: ${{ needs.create-release.outputs.release-id }},
+              name: "nue-release-${{ runner.os }}${{ runner.os == 'Windows' && '.exe' || '' }}",
+              data: asset
+            });
